Off by one error in transaction reaper

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.1
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Sharding 2018-06-04, Sharding 2018-06-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When handling expired transaction table entries, the transaction reaper handles each individually and bundles their session ids into a batch to be removed all at once. If the number of session ids in the current batch is greater than the max write batch size, handling will be paused and the accumulated sessions will be removed from the transaction table (if their corresponding session collection records have already been deleted). The session entries should instead be removed when the number of ids is equal to the max batch size. This is the case for both the sharded and replica set handlers.

            Assignee:
            Sarah Zhou
            Reporter:
            Jack Mulrow
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: