SERVER-35187 fix off by one error in transaction reaper